--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,7 @@
 iframe {
-    background: #ffffff91;
+    background: #ffffffe0;
+    color: #fff !important;
+    border-radius: 20px;
 }
 
 .intro-lead-in {
@@ -55,4 +57,35 @@ img.img-fluid.d-block.mx-auto.deaftech {
 img.img-fluid.d-block.mx-auto.cancun {
     margin-top: 0px;
     width: 190px;
+}
+
+.navbar {
+    padding: 0 !important;
+}
+
+.col-md-6.imgcancun img {
+    width: 100%;
+}
+
+.col-md-6.maps {
+    float: left;
+    padding: 0;
+}
+
+.col-md-6.imgcancun {
+    float: left;
+    margin-bottom: 35px;
+    padding: 0;
+}
+
+.col-md-6.imgcancun img {
+    height: 450px;
+}
+
+.col-md-6.maps iframe {
+    border-radius: 0;
+}
+
+section#team a {
+    margin: auto;
 }
